# post-app

./: .env  .flake8  .gitignore  Dockerfile  docker-compose.yml  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
apps/post/: admin.py  models.py  permissions.py  serializers.py  tasks.py  views.py
apps/post/migrations/: 0001_initial.py
apps/user/: admin.py  forms.py  managers.py  models.py  permissions.py  roles.py  serializers.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_administrator_moderator.py
core/: __init__.py  celery.py  database.py  settings.py  urls.py
env/: celery  django  postgres  redis
models/: __init__.py  post.py  user.py
routers/: __init__.py  user.py
schemas/: __init__.py  post.py  user.py
utils/: __init__.py
utils/abstract/: __init__.py  abstract_datetime.py  abstract_uuid.py
utils/management/commands/: database_connection.py
